Fix 'Generated SQL incomplete due to CHECK constraints not being terminated with ;'.

BUG:362244
FIXED-IN:2.19.1 (KDE Applications 16.04.1)